@@ -1,3 +1,7 @@
+2004-10-06  Derek Price  <derek@ximbiot.com>
+
+	* mkstemp.m4: Update from GNULIB.
+
 2004-10-05  Derek Price  <derek@ximbiot.com>
 
 	* fnmatch.m4: Update from GNULIB.
